feat(theme): added pair reset when change chain
* feat(sdk): first the permit implementation

--- a/libs/sdk/package.json
+++ b/libs/sdk/package.json
@@ -5,8 +5,9 @@
     "@one-inch-community/models": "0.1.x",
     "dexie": "3.2.x",
     "tslib": "2.3.0",
-    "viem": "2.9.x",
+    "viem": "2.12.x",
     "rxjs": "7.x.x",
+    "evm-proxy-detection": "2.0.x",
     "@walletconnect/ethereum-provider": "2.12.x",
     "@walletconnect/universal-provider": "2.12.x",
     "@walletconnect/modal": "2.6.x",
