--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@walletconnect/universal-provider": "2.12.2",
     "dexie": "3.2.7",
     "eventemitter3": "5.0.1",
+    "evm-proxy-detection": "^2.0.1",
     "lit": "3.1.2",
     "rxjs": "7.8.1",
     "tslib": "2.6.2",
-    "viem": "2.9.6"
+    "viem": "2.12.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "7.43.7",
