--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "eslint": "8.48.0",
     "eslint-config-prettier": "9.1.0",
     "jsdom": "22.1.0",
+    "minify-html-literals": "^1.3.5",
     "nx": "18.0.4",
     "prettier": "2.8.8",
+    "rollup-plugin-minify-html-literals": "^1.2.6",
     "semantic-release": "23.1.1",
     "swc-loader": "0.1.15",
     "ts-lit-plugin": "2.0.2",
