--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
+    "@vitejs/plugin-basic-ssl": "^1.1.0",
     "@vitest/coverage-v8": "1.6.0",
     "@vitest/ui": "1.6.0",
     "esbuild": "0.20.2",
