fix: optimization rendering scrollable overlays

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -28,6 +28,7 @@
       "./dist/libs/ui-components/lit",
       "./dist/libs/ui-components/overlay",
       "./dist/libs/ui-components/scene",
+      "./dist/libs/ui-components/scroll",
       "./dist/libs/ui-components/segmented-control",
       "./dist/libs/ui-components/theme",
       "./node_modules/@types"
