--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "lit": "3.1.2",
     "rxjs": "7.8.1",
     "tslib": "2.6.2",
-    "viem": "2.12.0"
+    "viem": "2.13.8",
+    "workbox-build": "7.1.1",
+    "workbox-window": "7.1.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "7.43.7",
@@ -42,6 +44,7 @@
     "@swc/helpers": "0.5.11",
     "@types/blessed": "0.1.25",
     "@types/node": "18.16.9",
+    "@types/workbox-sw": "^4.3.7",
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
@@ -62,8 +65,8 @@
     "typescript": "5.3.3",
     "verdaccio": "5.31.0",
     "vite": "5.0.13",
-    "vite-plugin-dts": "2.3.0",
     "vite-plugin-html": "3.2.2",
+    "vite-plugin-pwa": "^0.20.0",
     "vitest": "1.6.0"
   }
 }
