--- a/package.json
+++ b/package.json
@@ -4,31 +4,29 @@
   "license": "MIT",
   "scripts": {
     "start": "nx run one-inch-community:start",
-    "postinstall": "nx run one-inch-community:build-all-libs",
+    "postinstall": "nx run one-inch-community:postinstall",
     "build:lib": "ts-node --project ./tools/packagr/tsconfig.json tools/packagr/main.ts"
   },
   "dependencies": {
-    "@1inch/fusion-sdk": "^2.1.4",
-    "@lit-labs/virtualizer": "2.0.12",
-    "@lit/context": "1.1.0",
-    "@lit/task": "1.0.0",
-    "@maskito/core": "2.2.0",
-    "@maskito/kit": "2.2.0",
-    "@vaadin/router": "1.7.5",
-    "@walletconnect/ethereum-provider": "2.12.2",
+    "@1inch/fusion-sdk": "2.1.5-rc.0",
+    "@lit-labs/virtualizer": "2.0.13",
+    "@lit/context": "1.1.2",
+    "@lit/task": "1.0.1",
+    "@maskito/core": "2.5.0",
+    "@maskito/kit": "2.5.0",
+    "@walletconnect/ethereum-provider": "2.13.3",
     "@walletconnect/modal": "2.6.2",
-    "@walletconnect/universal-provider": "2.12.2",
+    "@walletconnect/universal-provider": "2.13.3",
     "dexie": "3.2.7",
     "eventemitter3": "5.0.1",
-    "lit": "3.1.2",
+    "lit": "3.1.4",
     "rxjs": "7.8.1",
-    "tslib": "2.6.2",
-    "viem": "2.16.2",
+    "tslib": "2.6.3",
+    "viem": "2.16.3",
     "workbox-build": "7.1.1",
     "workbox-window": "7.1.0"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "7.43.7",
     "@nx/eslint": "18.0.4",
     "@nx/eslint-plugin": "18.0.4",
     "@nx/js": "18.0.4",
@@ -42,7 +40,6 @@
     "@swc-node/register": "1.8.0",
     "@swc/core": "1.3.107",
     "@swc/helpers": "0.5.11",
-    "@types/blessed": "0.1.25",
     "@types/node": "18.16.9",
     "@types/workbox-sw": "^4.3.7",
     "@typescript-eslint/eslint-plugin": "6.21.0",
