feat: added swap algorithm
* added infura rpc
* combined http and wc providers via fallback into a single viem client

--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
     "build:lib": "ts-node --project ./tools/packagr/tsconfig.json tools/packagr/main.ts"
   },
   "dependencies": {
-    "@1inch/fusion-sdk": "2.1.5-rc.0",
+    "@1inch/fusion-sdk": "2.1.5-rc.1",
+    "@1inch/limit-order-sdk": "4.9.3-rc.0",
     "@lit-labs/virtualizer": "2.0.13",
     "@lit/context": "1.1.2",
     "@lit/task": "1.0.1",
     "@maskito/core": "2.5.0",
     "@maskito/kit": "2.5.0",
+    "@uniswap/permit2-sdk": "^1.3.0",
     "@walletconnect/ethereum-provider": "2.13.3",
     "@walletconnect/modal": "2.6.2",
     "@walletconnect/universal-provider": "2.13.3",
+    "assert": "2.1.0",
     "dexie": "3.2.7",
+    "ethers": "6.13.1",
     "eventemitter3": "5.0.1",
     "lit": "3.1.4",
     "rxjs": "7.8.1",
@@ -48,6 +52,7 @@
     "@vitest/coverage-v8": "1.6.0",
     "@vitest/ui": "1.6.0",
     "esbuild": "0.20.2",
+    "esbuild-plugin-polyfill-node": "^0.3.0",
     "eslint": "8.48.0",
     "eslint-config-prettier": "9.1.0",
     "jsdom": "22.1.0",
