--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,11 @@ tmp
 
 # dependencies
 node_modules
+.nx
 
 # IDEs and editors
 /.idea
+.fleet
 .project
 .classpath
 .c9/
@@ -41,4 +43,3 @@ testem.log
 Thumbs.db
 .env
 
-.nx/cache
