--- a/env.example
+++ b/env.example
@@ -1,3 +1,4 @@
 ONE_INCH_DEV_PORTAL_HOST={{proxy host}}
 WALLET_CONNECT_PROJECT_ID={{wallet connect project id}}
 GIT_HUB_RELEASES_TOKEN={{token}}
+INFURA_API_KEY={{api key}}
