BREAKING CHANGE: Refactor build configuration and API classes across libraries
The commit simplifies the TypeScript configuration for various libraries by decoupling and centralizing common compiler options in a new file, `tsconfig.libs.json`. Library-specific configurations have been simplified to extend this centralized file. Also implemented a module name transformer in dependencies finder and usage of enumeration for build statuses for more semantic code. API classes related to OneInchDevPortalAdapter from the 'core' library have been moved to the 'sdk' library for better encapsulation of functionalities.

--- a/libs/ui-components/tsconfig.spec.json
+++ b/libs/ui-components/tsconfig.spec.json
@@ -1,8 +1,7 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "../../tsconfig.libs.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "module": "commonjs",
     "types": ["jest", "node"]
   },
   "include": [
