--- a/libs/widgets/tsconfig.lib.json
+++ b/libs/widgets/tsconfig.lib.json
@@ -1,20 +1,5 @@
 {
-  "extends": "./tsconfig.json",
-  "compilerOptions": {
-    "declaration": true,
-    "useDefineForClassFields": false,
-    "experimentalDecorators": true,
-    "types": ["node"],
-    "target": "esnext",
-    "module": "esnext",
-    "strict": true,
-    "importHelpers": true,
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "sourceMap": true,
-    "declarationMap": true
-  },
+  "extends": "../../tsconfig.libs.json",
   "include": ["src/**/*.ts"],
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
