--- a/project.json
+++ b/project.json
@@ -24,7 +24,7 @@
       "executor": "nx:run-commands",
       "options": {
         "env": {
-          "skipIfStart": true
+          "skipIfStart": "true"
         },
         "commands": [
           "pnpm run build:lib"
@@ -35,7 +35,7 @@
       "executor": "nx:run-commands",
       "options": {
         "env": {
-          "isWatch": true
+          "isWatch": "true"
         },
         "commands": [
           "pnpm run build:lib"
