fix: builder config

--- a/libs/models/project.json
+++ b/libs/models/project.json
@@ -9,7 +9,7 @@
       "options": {
         "env": {
           "libName": "models",
-          "oneModuleLibrary": true
+          "oneModuleLibrary": "true"
         },
         "commands": [
           "pnpm run build:lib"
