feat: Refactor swap-form element to improve readability and performance
This commit significantly simplifies the code of the swap-form element, improving readability and potentially improving performance. It removes many unused imports, splits the desktop and mobile views into separate components, and adds better handling for swapping contexts. It also pre-loads the appropriate form depending on whether the user is on a mobile device or not.

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "verdaccio": "5.31.1",
     "vite": "5.3.3",
     "vite-plugin-html": "3.2.2",
+    "vite-plugin-preload": "^0.4.0",
     "vite-plugin-pwa": "0.20.0",
     "vitest": "1.6.0"
   }
