--- a/.github/workflows/dev-pipeline.yml
+++ b/.github/workflows/dev-pipeline.yml
@@ -34,6 +34,7 @@ jobs:
 
   release:
     runs-on: macos-latest
+    needs: check
 
     permissions:
       contents: write
@@ -57,6 +58,7 @@ jobs:
 
   public-on-pages:
     runs-on: ubuntu-latest
+    needs: release
 
     steps:
       - name: Checkout repository
