feat: added npm lib release for test 2

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -21,7 +21,7 @@
       "@semantic-release/npm",
       {
         "npmPublish": true,
-        "pkgRoot": "dist/libs/models",
+        "pkgRoot": "./dist/libs/models",
         "registry": "https://npm.pkg.github.com/"
       }
     ],
