--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -39,6 +39,9 @@
       ],
       "@one-inch-community/widgets/*": [
         "dist/libs/widgets/*"
+      ],
+      "@one-inch-community/integration-layer/*": [
+        "dist/libs/integration-layer/*"
       ]
     }
   },
