--- a/libs/sdk/package.json
+++ b/libs/sdk/package.json
@@ -1,9 +1,9 @@
 {
   "name": "sdk",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "peerDependencies": {
-    "@one-inch-community/models": "0.1.x",
-    "@one-inch-community/core": "0.1.x",
+    "@one-inch-community/models": "1.0.0",
+    "@one-inch-community/core": "1.0.0",
     "dexie": "3.2.x",
     "tslib": "2.3.0",
     "viem": "2.12.x",
