feat: Add embedded controller functionality
This commit introduces new embedded controllers for various functionalities such as swap forms, themes, and wallet connection. It also updates the package.json to new dependency versions and incorporates new Angular configurations for the example project.

--- a/libs/models/package.json
+++ b/libs/models/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "peerDependencies": {
     "tslib": "2.3.0",
-    "viem": "2.9.x",
+    "viem": "2.x.x",
     "rxjs": "7.x.x"
   }
 }
