--- a/libs/sdk/package.json
+++ b/libs/sdk/package.json
@@ -6,7 +6,7 @@
     "@one-inch-community/core": "1.0.0",
     "dexie": "3.2.x",
     "tslib": "2.3.0",
-    "viem": "2.12.x",
+    "viem": "2.x.x",
     "rxjs": "7.x.x",
     "evm-proxy-detection": "2.0.x",
     "@walletconnect/ethereum-provider": "2.12.x",
