--- a/libs/ui-components/package.json
+++ b/libs/ui-components/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "peerDependencies": {
     "@one-inch-community/models": "1.0.0",
-    "@one-inch-community/core/lit": "1.0.0",
+    "@one-inch-community/core": "1.0.0",
     "@lit/context": "1.1.x",
     "@lit/task": "1.0.x",
     "lit": "3.1.x",
     "tslib": "2.3.0",
-    "viem": "2.9.x",
+    "viem": "2.x.x",
     "rxjs": "7.8.x"
   }
 }
