--- a/libs/widgets/package.json
+++ b/libs/widgets/package.json
@@ -11,7 +11,7 @@
     "@lit/task": "1.0.x",
     "lit": "3.1.x",
     "tslib": "2.3.0",
-    "viem": "2.9.x",
+    "viem": "2.x.x",
     "rxjs": "7.x.x"
   }
 }
