feat: Add support for 1inch Dev Portal token configuration
This update introduces the ability to configure the 1inch Dev Portal API token across different widgets and integration layers. Key changes include updating environment handling, adding new configuration options, and ensuring the API token is correctly included in requests.

--- a/env.example
+++ b/env.example
@@ -1,4 +1,5 @@
 ONE_INCH_DEV_PORTAL_HOST={{proxy host}}
+ONE_INCH_DEV_PORTAL_TOKEN={{1inch dev portal api token}}
 WALLET_CONNECT_PROJECT_ID={{wallet connect project id}}
 GIT_HUB_RELEASES_TOKEN={{token}}
 INFURA_API_KEY={{api key}}
