--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -24,6 +24,7 @@ http {
             limit_req zone=mylimit burst=1000;
             proxy_pass https://api.1inch.dev/;
             proxy_set_header X-Forwarded-Proto https;
+            proxy_set_header content-type "application/json";
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             proxy_ssl_server_name on;
