feat: Add step to clean NX cache in CI pipeline
This commit introduces a step to reset the NX cache before running the link check in the `dev-pipeline.yml`. This ensures cleaner and potentially more reliable builds by clearing any residual cache that may interfere with the linting process.

--- a/.github/workflows/dev-pipeline.yml
+++ b/.github/workflows/dev-pipeline.yml
@@ -23,6 +23,9 @@ jobs:
         with:
           node-version: ${{ vars.NODE_VERSION }}
 
+      - name: Clean nx cache
+        run: nx reset
+
       - name: Run link check
         run: npx nx run-many --target=lint --all
 
