feat: Add Sentry integration
Implement Sentry error tracking across multiple modules. Introduced a new SentryController for error handling in the application context. Updated dependencies and added sentry-related configurations in various files.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@lit/task": "1.0.1",
     "@maskito/core": "2.5.0",
     "@maskito/kit": "2.5.0",
+    "@sentry/browser": "8.30.0",
+    "@sentry/types": "8.30.0",
     "@walletconnect/ethereum-provider": "2.16.1",
     "@walletconnect/modal": "2.6.2",
     "@walletconnect/universal-provider": "2.16.1",
@@ -51,6 +53,7 @@
     "@semantic-release/git": "10.0.1",
     "@semantic-release/github": "10.0.7",
     "@semantic-release/npm": "12.0.1",
+    "@sentry/vite-plugin": "^2.22.4",
     "@swc-node/register": "1.10.0",
     "@swc/core": "1.6.7",
     "@swc/helpers": "0.5.11",
