--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -13,7 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
+    "typescript": "~5.3.2",
     "web-vitals": "^2.1.4",
     "@one-inch-community/models": "file://../../dist/libs/models",
     "@one-inch-community/core": "file://../../dist/libs/core",
