--- a/examples/vue/package.json
+++ b/examples/vue/package.json
@@ -1,14 +1,14 @@
 {
   "name": "one-inch-community-embedded-vue-example",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13",
+    "core-js": "3.38.1",
+    "vue": "3.5.12",
     "@one-inch-community/models": "file://../../dist/libs/models",
     "@one-inch-community/core": "file://../../dist/libs/core",
     "@one-inch-community/integration-layer": "file://../../dist/libs/integration-layer",
@@ -17,9 +17,9 @@
     "@one-inch-community/widgets": "file://../../dist/libs/widgets"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-typescript": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "typescript": "~4.5.5"
+    "@vue/cli-plugin-babel": "5.0.8",
+    "@vue/cli-plugin-typescript": "5.0.8",
+    "@vue/cli-service": "5.0.8",
+    "typescript": "~5.3.2"
   }
 }
